--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 		<meta charset="utf-8" />
 		<title>Example Title</title>
 	</head>
+	<h1>This is my first heading!</h1>
+		<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus vestibulum orci, eu placerat massa adipiscing ut. Nullam id elit tincidunt, elementum massa sit amet, semper diam. Pellentesque placerat tortor id dui consectetur, id porta metus imperdiet. Donec sem metus, fringilla at sem sed, hendrerit molestie nibh. Cras vehicula arcu diam, et sagittis neque vehicula vitae. Praesent malesuada urna id adipiscing imperdiet. Cras vulputate eu leo sit amet pharetra. Vivamus urna tortor, dapibus vel suscipit at, hendrerit ut risus. Quisque diam enim, faucibus et suscipit ac, tempor a felis. </p> -->
 	<body>
-		<p>Replace this content with your own.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus vestibulum orci, eu placerat massa adipiscing ut. Nullam id elit tincidunt, elementum massa sit amet, semper diam. Pellentesque placerat tortor id dui consectetur, id porta metus imperdiet. Donec sem metus, fringilla at sem sed, hendrerit molestie nibh. Cras vehicula arcu diam, et sagittis neque vehicula vitae. Praesent malesuada urna id adipiscing imperdiet. Cras vulputate eu leo sit amet pharetra. Vivamus urna tortor, dapibus vel suscipit at, hendrerit ut risus. Quisque diam enim, faucibus et suscipit ac, tempor a felis.</p>
 	</body>	
 </html>	
